address review comments